crates/tau-sandbox-native/src/net_filter/snapshots/tau_sandbox_native__net_filter__rules__tests__generate_ruleset_with_no_allowed_ips_only_has_ct_state_and_dns.snap
---
source: crates/tau-sandbox-native/src/net_filter/rules.rs
expression: ruleset
---
table inet tau_sandbox {
    chain output {
        type filter hook output priority 0; policy drop;
        ct state established,related accept
        udp dport 53 ip daddr 1.1.1.1 accept
        udp dport 53 ip daddr 8.8.8.8 accept
    }
}

